--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "backend/server.js",
   "scripts": {
     "start": "cd backend && npm start",
-    "dev": "cd backend && npm run dev",
+    "dev": "cd backend && npm run dev", 
+    "build": "cd backend && npm install --production",
+    "install": "cd backend && npm install",
+    "postinstall": "cd backend && npm install",
     "install-backend": "cd backend && npm install",
     "install-frontend": "cd frontend && npm install",
     "build-frontend": "cd frontend && npm run build"
