--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,11 @@
 [build]
   base = "frontend"
-  command = "npm install && npm run build"
+  command = "CI=false npm install && npm run build"
   publish = "build"
 
 [build.environment]
   NODE_VERSION = "18"
+  CI = "false"
 
 [[redirects]]
   from = "/*"
@@ -13,3 +14,4 @@
 
 [context.production.environment]
   REACT_APP_ENVIRONMENT = "production"
+  CI = "false"
